--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-	"name": "my-first-worker",
-	"version": "0.0.0",
-	"private": true,
-	"scripts": {
-		"deploy": "wrangler deploy",
-		"dev": "wrangler dev",
-		"start": "wrangler dev"
-	},
-	"devDependencies": {
-		"wrangler": "^4.54.0"
-	}
+    "name": "crcn.ie",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "deploy": "wrangler deploy",
+        "dev": "wrangler dev",
+        "start": "wrangler dev"
+    },
+    "devDependencies": {
+        "wrangler": "^4.54.0"
+    },
+    "packageManager": "yarn@4.12.0"
 }
