--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,6 @@
 {
     "$schema": "node_modules/wrangler/config-schema.json",
-    "name": "crcn.ie",
+    "name": "crcn",
     "compatibility_date": "2025-12-29",
     "assets": {
         "directory": "./public"
